Fix dark mode for Aquatica

--- a/src/css/games/aquatica.less
+++ b/src/css/games/aquatica.less
@@ -1,6 +1,14 @@
 @import "./common";
 
 html[data-theme=dark] {
+	#overall-content:before {
+		content: "";
+		background: #00000080;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+	}
+
 	#bga-zoom-controls {
 		filter: invert(0.8);
 	}
